# practice30_parth1_user_queries

./: CMakeLists.txt  UserQueries.cpp
